--- a/dada/extras/documentation/pod_source/COOKBOOK-subscriptions.pod
+++ b/dada/extras/documentation/pod_source/COOKBOOK-subscriptions.pod
@@ -386,7 +386,7 @@ To use the jQuery plugin, you'll first need to load the plugin's .js file, along
 	<script src="http://example.com/static/javascripts/jquery.dadamail.js"></script>
 	
 	
-B<jquery.dadamail.js) is the jQuery plugin itself, but it does require B<jQuery> to be loaded (in our case, it's called, B<jquery-1.8.2.min.js), as well the Colorbox jQuery plugin (L<http://www.jacklmoore.com/colorbox/>). 
+B<jquery.dadamail.js> is the jQuery plugin itself, but it does require B<jQuery> to be loaded (in our case, it's called, B<jquery-1.8.2.min.js>), as well the Colorbox jQuery plugin (L<http://www.jacklmoore.com/colorbox/>). 
 
 All these are bundled with Dada Mail, but you may use your own copies, if you'd like. To change the design of the modal window that pops up, you'll want to work with Colorbox's own .css file. 
 
